--- a/css/style.css
+++ b/css/style.css
@@ -173,12 +173,12 @@ display: flex;
 }
 
 .team-text {
-  margin-bottom: 8px;
+  margin-bottom: 12px;
 }
 
 .social {
   display: flex;
-  padding: 4px 0px;
+  padding: 0px;
   margin: 0;
   list-style: none;
   align-items: center;
@@ -186,19 +186,38 @@ display: flex;
   gap: 24px;
 }
 
+.posicion {
+  padding: 0;
+  margin: 0;
+}
+
 .social-link {
-  padding: 12px;
+  display: block;
+  padding: 10px;
   border: none;
   width: 40px;
   height: 40px;
   background-color: var(--color-primary-brand);
-  border-radius: 25px;
+  border-radius: 50%;
 }
 
 .social-icon {
+  
 width: 16px;
 height: 16px;
 fill: var(--color-white);
+}
+
+.social-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid var(--light-slate);
+  border-radius: 25px;
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  fill: var(--light-slate);
 }
 
 .social-link:hover,
@@ -358,6 +377,7 @@ border-color: var(--color-primary-brand);
 .button-service {
   background-color: var(--color-primary-brand);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: none;
   border-radius: 4px;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
@@ -438,6 +458,7 @@ border-color: var(--color-primary-brand);
 
 
 .media-item {
+  display: block;
   padding: 8px;
   border: none;
   width: 40px;
